--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,25 +5,25 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Project
-project(libcfgpathTests)
-add_executable(libcfgpathTests)
-target_include_directories(libcfgpathTests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_sources(libcfgpathTests PRIVATE
+project(storepaths-tests)
+add_executable(storepaths-tests)
+target_sources(storepaths-tests PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/src/test-common-c.c
         ${CMAKE_CURRENT_SOURCE_DIR}/src/test-common-cpp.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
 
-# libcfgpath
-target_include_directories(libcfgpathTests PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/../libcfgpath/include
+# storepaths
+add_subdirectory(storepaths)
+target_include_directories(storepaths-tests PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/storepaths/include
         ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
-target_link_libraries(libcfgpathTests PRIVATE libcfgpath)
+target_link_libraries(storepaths-tests PRIVATE storepaths)
 
 # Compile options
 if(UNIX)
-    target_compile_options(libcfgpathTests
+    target_compile_options(storepaths-tests
             PUBLIC
             -Wall
             -Wpedantic
